# powersmooth

./: README.md  example.py  pyproject.toml  setup.py
example/: example.py
powersmooth/: __init__.py  powersmooth.py
tests/: test_finite_diff_matrix.py  test_powersmooth_general.py
